--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      
     </header>
     <main>
       <section class="card" id="html-section"
@@ -50,9 +51,10 @@
       <section class="card" id="javascript-section"
 
       <h2> JavaScript </h2>
-        <ul>
-          <li> Enter your Javascript notes here</li>
-        </ul>
+      <ul>
+        <li>A variable is a named container that allows us to store data in our code.</li>
+        <li>Control flow is the order in which a computer executes code in a script.</li>
+      </ul>
 
       </section>
 
@@ -63,5 +65,6 @@
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
